 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/weather_bg_gardient">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="--"
        android:id="@+id/temperature"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFFFF"
        android:textSize="100sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/degree"
        android:src="@drawable/degree"
        android:layout_alignTop="@+id/temperature"
        android:layout_toEndOf="@+id/temperature" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/no_time_default_message"
        android:id="@+id/time"
        android:layout_above="@+id/degree"
        android:layout_centerHorizontal="true"
        android:textColor="#80FFFFFF"
        android:textSize="20sp"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:text="New York, NY"
        android:id="@+id/location"
        android:layout_above="@+id/time"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"
        android:textColor="#FFFFFFFF" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/icon_image"
        android:src="@drawable/clear_day"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@id/location" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temperature"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:id="@+id/humidityText"
                android:textColor="#80FFFFFF"
                android:textSize="20sp"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dash"
                android:id="@+id/humidity"
                android:textColor="#FFFFFFFF"
                android:textSize="20sp"
                android:gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/precip"
                android:id="@+id/precipText"
                android:textSize="20sp"
                android:textColor="#80FFFFFF"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/precip"
                android:textColor="#FFFFFFFF"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:text="@string/dash" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_network_update_message"
        android:id="@+id/summary"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textColor="#FFFFFFFF"
        android:textSize="20sp"
        android:gravity="center_horizontal" />

     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/refresh"
         android:src="@drawable/refresh"
         android:layout_above="@+id/location"
         android:layout_centerHorizontal="true" />

     <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/progressBar"
         android:layout_alignTop="@+id/refresh"
         android:layout_centerHorizontal="true"
         android:layout_alignBottom="@+id/refresh" />

     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true">

         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/dailyButton"
             android:layout_weight="1"
             android:layout_margin="5dp"
             android:background="#40FFFFFF"
             android:textColor="#FFFFFFFF"
             android:text="@string/week"/>

         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/hourly"
             android:layout_margin="5dp"
             android:id="@+id/hourButton"
             android:layout_weight="1"
             android:background="#40FFFFFF"
             android:textColor="#FFFFFFFF" />
     </LinearLayout>


 </RelativeLayout>
